# simple-mcp-servers

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  claude_config_example.json  deer_to_bsky.py  github_clone_mcp.py  github_repo_mcp.py  google_maps_mcp.py  install.sh  large_file_reader_mcp.py  main.py  make_executable.sh  obsidian_toy_mcp.py  obsidian_vault_mcp.py  pyproject.toml  run.sh  setup.py  simple_echo.py  test.sh  test_mcp.py  time_god_mcp.py  youtube_transcript_mcp.py
archive/: obsidian_vault_mcp.py  time_god_mcp.py
deer_to_bsky_mcp/: __init__.py  app.py
tests/: __init__.py  test_converter.py
