[tool.poetry]
name = "deer-to-bsky-mcp"
version = "0.1.0"
description = "MCP server for converting deer.social links to Bluesky formats"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
