[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deer-to-bsky-mcp"
version = "0.1.0"
description = "MCP server for converting deer.social links to Bluesky formats"
authors = [
    {name = "Developer", email = "example@example.com"}
]
requires-python = ">=3.10"  # Updated to match fastmcp requirements
dependencies = [
    "fastmcp>=0.1.0",
]

[tool.setuptools]
py-modules = ["deer_to_bsky"]
